Fix deprecation.